--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,27 @@
-<h2>Sign up</h2>
+<h2>Registrarse</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: {controller: "md5register"}) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="field input-group input-group-lg my-4">
+    <span class="input-group-text" id="inputGroup-sizing-lg">Correo</span>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: 'Correo electrónico', class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="field input-group input-group-lg my-4">
+    <span class="input-group-text" id="inputGroup-sizing-lg">Contraseña</span>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", placeholder: '6 caracteres mínimo', class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="field input-group input-group-lg my-4">
+    <span class="input-group-text" id="inputGroup-sizing-lg">Confirmar contraseña</span>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: '6 caracteres mínimo', class: 'form-control' %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up", id:"signup" %>
+    <%= f.submit "Registrarse", id:"signup", class: 'btn btn-primary mt-1 mb-3' %>
   </div>
 <% end %>
 
